# insane

./: .gitignore  README.md
insane-example/: Cargo.toml
insane-example/migration/: Cargo.toml
insane-example/src/: commands.rs  error.rs  hook.rs  lib.rs  main.rs
insane-example/src/http/: mod.rs  routes.rs
sources/: Cargo.toml
sources/crates/insane-cli/: Cargo.toml
sources/crates/insane-cli/src/: doctor.rs  error.rs  lib.rs
sources/crates/insane-cli/src/commands/: custom.rs  doctor.rs  mod.rs  sql.rs  start.rs  version.rs
sources/crates/insane-core/: Cargo.toml
sources/crates/insane-core/src/: backtrace.rs  banner.rs  boot_loader.rs  context.rs  environment.rs  error.rs  hook.rs  lib.rs  server.rs  sql.rs  traces.rs
sources/crates/insane-core/src/config/: loader.rs  mod.rs  sql.rs  trace.rs
sources/crates/insane-http/: Cargo.toml
sources/crates/insane-http/src/: config.rs  context.rs  describe.rs  error.rs  format.rs  health.rs  hook.rs  http_routes.rs  lib.rs  ping.rs  routes.rs  server.rs
sources/crates/insane-http/src/middlewares/: format.rs  mod.rs
