[package]
name = "insane-cli"
version = "0.1.0"
edition = "2021"

[features]
default = ["with-sql"]
with-sql = ["dep:sea-orm", "dep:sea-orm-migration"]
with-redis = []

[dependencies]
# insane-database = { workspace = true, optional = true }
# insane-utils = { workspace = true }

thiserror = { workspace = true }
eyre = { workspace = true }
backtrace_printer = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
tokio = { workspace = true }
cfg-if = { workspace = true }
async-trait = { workspace = true }

# DATABASE
sea-orm = { optional = true, version = "1.0.0-rc.1", features = [
  "sqlx-postgres",        # `DATABASE_DRIVER` feature
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }

[target.'cfg(feature = "with-sql")'.dependencies]
insane-core = { workspace = true, features = ["with-sql"] }

[target.'cfg(not(feature = "with-sql"))'.dependencies]
insane-core = { workspace = true  }

[dependencies.sea-orm-migration]
optional = true
version = "1.0.0-rc.1"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-postgres",        # `DATABASE_DRIVER` feature
  "sqlx-sqlite",
]
