[package]
name = "insane-http"
version = "0.1.0"
edition = "2021"

[features]
default = ["with-sql"]
with-sql = []
with-redis = []

[dependencies]
[target.'cfg(feature = "with-sql")'.dependencies]
insane-core = { workspace = true, features = ["with-sql"] }

[target.'cfg(not(feature = "with-sql"))'.dependencies]
insane-core = { workspace = true  }


eyre = { workspace = true }
backtrace_printer = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-attributes = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
nanoid = { workspace = true }

tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_variant = { workspace = true }

async-trait = { workspace = true }

http-body-util = "0.1.1"

axum = { version = "0.7.1", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
axum-test = { version = "14.3.0", optional = true }

futures-util = { workspace = true }
hyper = { workspace = true }
mime = { workspace = true }
bytes = { workspace = true }
byte-unit = { workspace = true }
fs-err = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }